5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3812/executions/1646_2449.log
== SUBMITION (2019-05-27 15:28:42) 
-- CODE:
a = float(input("digite o valor de a: "))
b = float(input("digite o valor de b: "))
c = float(input("digite o valor de c: "))
d = float(input("digite o valor de d: "))
e = float(input("digite o valor de e: "))
f = float(input("digite o valor de f: "))

if (a*e-b*d) =! 0:

	x = (c*e-b*f)/(a*e-b*d) 
	y = (a*f-c*d)/(a*e-b*d)

	print(x)
	print(y)
else:

	print("Nao tem solucao")
-- EXECUTION TIME:
0.216858
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 8
    if (a*e-b*d) =! 0:
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:28:57) 
-- CODE:
a = float(input("digite o valor de a: "))
b = float(input("digite o valor de b: "))
c = float(input("digite o valor de c: "))
d = float(input("digite o valor de d: "))
e = float(input("digite o valor de e: "))
f = float(input("digite o valor de f: "))

if (a*e-b*d) != 0:

	x = (c*e-b*f)/(a*e-b*d) 
	y = (a*f-c*d)/(a*e-b*d)

	print(x)
	print(y)
else:

	print("Nao tem solucao")
-- EXECUTION TIME:
0.14961
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
